--- a/css/new_style.css
+++ b/css/new_style.css
@@ -19,6 +19,7 @@ a {
 	height: auto;
 	margin-top: 2%;
 	margin-bottom: 2%;
+
 }
 
 header h1 {
@@ -33,6 +34,7 @@ header p {
     font-size:16px;
     color: #4A463B;
     margin-left:132px;
+    margin-bottom: 25px;
 }
 
 .main-header nav {
