--- a/css/new_work.css
+++ b/css/new_work.css
@@ -13,8 +13,12 @@
 	margin-top: 5%;
 }
 
-.bottomContent, #whiteleyContent, #farfieldContent, #javaScriptContent, #comingSoonContent {
+.bottomContent, #whiteleyContent, #farfieldContent, #javaScriptContent, #gitHubContent, #MTDContent {
 	height: 350px;
+}
+
+#MTD.image-wrapper .image-overlay .content {
+	color: #000;
 }
 
 #whiteley.image-wrapper {
@@ -28,14 +32,20 @@
 #javaScript.image-wrapper {
 	background-color: #000;
 	text-align: center;
-	font-color: red;
 }
 
-#proj-4.image-wrapper {
-	background-image: url("../img/Optimized-work-in-progress2.jpg");
+#gitHub.image-wrapper {
+	background-color: #60b044;
+	text-align: center;
+	border: solid 1px;
 }
 
-#whiteley, #farfield, #proj-4.image-wrapper {
+#MTD.image-wrapper {
+	background-image: url("../img/MTD_logo.png");
+	color: #000;
+}
+
+#whiteley, #farfield, #MTD.image-wrapper {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
