added link to MTD in work section, added media query for large wide screens upto 1880px to reduce body width

--- a/css/new_style.css
+++ b/css/new_style.css
@@ -226,6 +226,12 @@ header p {
 
 }
 
+@media only screen and (min-width: 1441px) and (max-width: 1880px) {
+	.body {
+		width: 65%;
+	}
+}
+
 @media only screen and (min-width: 150px) and (max-width: 397px) {
 
 header h1 {
